<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.1.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.1.0
                             http://maven.apache.org/xsd/maven-4.1.0.xsd">
  <modelVersion>4.1.0</modelVersion>

  <groupId>com.example.jigsaw</groupId>
  <artifactId>example_unnamed-module_access-from-explicit-module-m4</artifactId>
  <version>1.0</version>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <sources>
      <source>
        <module>modb</module>
        <directory>src/java/modb/main</directory>
      </source>
      <source>
        <module>modmain</module>
        <directory>src/java/modmain/main</directory>
      </source>
    </sources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>4.0.0-beta-3</version>
        <configuration>
          <compilerArgs>
            <arg>--add-reads</arg>
            <arg>modmain=ALL-UNNAMED</arg>
            <arg>--class-path</arg>
            <arg>${project.basedir}/cplib/cpb.jar</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
